<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
		<TextView
			android:id="@+id/label_guide"
	    	android:layout_width="fill_parent" 
	    	android:layout_height="wrap_content" 
	    	android:text=""
	    	android:textSize="20px"
	    	android:gravity="center_horizontal|center_vertical"
	    />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        >
		<TextView  
			android:id="@+id/label_count"
	    	android:layout_width="fill_parent" 
	    	android:layout_height="fill_parent" 
	    	android:gravity="center_horizontal|center_vertical"
	    	android:textSize="112px"
	    	android:enabled="false"
	    />
	</LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
		<TextView
			android:id="@+id/label_start_date"
	    	android:layout_width="fill_parent" 
	    	android:layout_height="wrap_content" 
	    	android:text="@string/startDate"
	    	android:textSize="20px"
	    />
		<TextView
			android:id="@+id/label_elapsed_time"
	    	android:layout_width="fill_parent" 
	    	android:layout_height="wrap_content" 
	    	android:text="@string/elapsedTime"
	    	android:textSize="20px"
	    />
    </LinearLayout>
    <LinearLayout
        style="@android:style/ButtonBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/startStopButton"
            android:onClick="onClickStartStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clickToStart" />
    </LinearLayout>
</LinearLayout>
